--- a/api-reference/apis/uncensored-chat-api/chat-completions.mdx
+++ b/api-reference/apis/uncensored-chat-api/chat-completions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Uncensored Chat Completions"
+title: "Chat Completions"
 openapi: 'POST /chat/completions'
 description: 'OpenAI-compatible API that allows you to create chat conversations and receive responses and also supports OpenAI SDKs. '
 ---
