--- a/api-reference/apis/uncensored-chat-api/completions.mdx
+++ b/api-reference/apis/uncensored-chat-api/completions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Uncensored Completions"
+title: "Completions"
 openapi: 'POST /completions'
 description: 'The Uncensored Completions endpoint generates responses based on provided prompts without restrictions, and supports OpenAI SDKs and uses Bearer token authentication.'
 ---
