--- a/api-reference/apis/uncensored-chat-api/overview.mdx
+++ b/api-reference/apis/uncensored-chat-api/overview.mdx
@@ -1,20 +1,17 @@
 ---
-title: "Uncensored Chat API"
+title: "Overview"
 description: "Uncensored Chat API allows you to engage in open conversations without any restrictions, rules, or censorship."
 ---
 
-<a href='https://uncensored.chat/'>
-<button className='custom-button'>
- Open in Playground
-</button>
-</a>
-
-### Uncensored Chat Endpoint
-
-The Uncensored Chat endpoint allows you to create chat conversations and receive responses based on the conversation. It is highly flexible and can answer any question without restrictions.
-
-### Chat Completions endpoint
-The Uncensored Completions endpoint generates responses based on provided prompts without restrictions. It supports OpenAI SDKs and uses Bearer token authentication.
-
-### Uncensored Chat Completions Endpoint
-The Chat Completions endpoint is an OpenAI-compatible API that allows you to create chat conversations and receive responses. It supports OpenAI SDKs, enabling seamless integration with minimal changes.
+### Endpoints
+<CardGroup>
+  <Card title="Uncensored Chat" href="/api-reference/apis/uncensored-chat-api/uncensored-chat">
+    The Uncensored Chat endpoint enables unrestricted, flexible chat conversations and responses to any question.
+  </Card>
+  <Card title="Uncensored Chat Completions" href="/api-reference/apis/uncensored-chat-api/completions" >
+    The Chat Completions endpoint is an OpenAI-compatible API for chat conversations, supporting OpenAI SDKs for easy integration with minimal changes.
+  </Card>
+  <Card title="Chat Completions" href="/api-reference/apis/uncensored-chat-api/chat-completions">
+    The Uncensored Completions endpoint generates unrestricted responses from prompts, supports OpenAI SDKs, and uses Bearer token authentication.
+  </Card>
+</CardGroup>
