--- a/api-reference/apis/general-api/buy-model.mdx
+++ b/api-reference/apis/general-api/buy-model.mdx
@@ -1,71 +1,24 @@
 ---
 title: "Automatically Buy Lora Model"
 openapi: 'POST /dreambooth/buy_model'
+description: 'Allows you to buy a Lora model automatically'
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-This endpoint allows you to buy a Lora model automatically.
-
-## Request[​](#request "Direct link to Request")
-
-```
---request POST 'https://modelslab.com/api/v3/dreambooth/buy_model' \
-```
 
 <Warning>
   Before calling this endpoint, make sure that you have enabled **[Lora Auto Payment](https://modelslab.com/settings/dreambooth)** on your dashboard.
 </Warning>
 
-Send a `POST` request to [https://modelslab.com/api/v3/dreambooth/buy\_model](https://modelslab.com/api/v3/dreambooth/buy_model) endpoint and pass the **quantity** of the models you want to buy in the request body.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter    | Type   | Description                                 |
-| :----------- | :----- | :------------------------------------------ |
-| **key**      | String | Your API Key used for request authorization |
-| **quantity** | String | The number of models you want to buy        |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{  "key": "",  "quantity": "4"}
+## Request
+Send a `POST` request to below endpoint and pass the **quantity** of the models you want to buy in the request body.
+```curl curl
+--request POST 'https://modelslab.com/api/v3/dreambooth/buy_model' \
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "quantity": "4"});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v3/dreambooth/buy_model", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => "",  "quantity" => "4"];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v3/dreambooth/buy_model',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v3/dreambooth/buy_model',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "quantity": "4"  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v3/dreambooth/buy_model"payload = json.dumps({  "key": "",  "quantity": "4"})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\",\n    \"quantity\": \"4\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v3/dreambooth/buy_model")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-```
-{  "status": "success",  "messege": "Payment was charged successfuly",  "purchased_models": 4,  "used_models": 0,  "available_models": 42}
+```json json
+{  
+  "key": "",  
+  "quantity": ""
+}
 ```
