--- a/api-reference/apis/general-api/buy-subscription.mdx
+++ b/api-reference/apis/general-api/buy-subscription.mdx
@@ -1,73 +1,23 @@
 ---
 title: "Automatically Buy Subscription Plan"
 openapi: 'POST /buy_subscription'
+description: 'This endpoint allows you to buy subscription for a particular api key automatically'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+<Warning>
+  Before calling this endpoint, make sure that you have enabled **[Subscription Auto Payment](https://modelslab.com/dashboard/subscription)** on your dashboard.
+</Warning>
 
-This endpoint allows you to buy an API key with a subscription plan automatically.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint and pass the desired **plan\_name** to buy in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v3/buy_subscription' \
 ```
 
-<Warning>
-  Before calling this endpoint, make sure that you have enabled **[Subscription Auto Payment](https://modelslab.com/dashboard/subscription)** on your dashboard
-</Warning>
-
-Send a `POST` request to [https://modelslab.com/api/v3/buy\_subscription](https://modelslab.com/api/v3/buy_subscription) endpoint and pass the desired **plan\_name** to buy in the request body.
-
-The available plan names are: `basic_monthly`, `basic_yearly`, `standard_monthly`,`standard_yearly`,`premium_monthly` and `premium_yearly`.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter      | Type   | Description                                                                                                                                    |
-| :------------- | :----- | :--------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**        | String | Your default API Key used for request authorization                                                                                            |
-| **plan\_name** | String | The name of the plan you want to buy (basic\_monthly, basic\_yearly, standard\_monthly, standard\_yearly, premium\_monthly or premium\_yearly) |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{  "key":"your-default-api-key",  "plan_name":"basic_monthly"}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "plan_name":"basic_monthly"});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v3/buy_subscription", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => "",  "plan_name" =>"basic_monthly"];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v3/buy_subscription',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v3/buy_subscription',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "plan_name":"basic_monthly"  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v3/buy_subscription"payload = json.dumps({  "key": "",  "plan_name":"basic_monthly"})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\",\n    \"plan_name\": \"basic_monthly\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v3/buy_subscription")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-```
-{  "status": "success",  "messege": "You have just bought a custom api with basic plan",  "data": {    "key": "purchased-api-key-string",    "plan": "basic_monthly"  }}
+## Body
+```json json
+{  
+  "key":"your-default-api-key",  
+  "plan_name":"basic_monthly"
+}
 ```
