--- a/api-reference/apis/general-api/cancel-subscription.mdx
+++ b/api-reference/apis/general-api/cancel-subscription.mdx
@@ -1,71 +1,23 @@
 ---
 title: "Automatically Cancel Subscription Plan"
 openapi: 'POST /cancel_subscription'
+description: 'This endpoint allows you to cancel subscription for a particular api key automatically'
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-This endpoint allows you to cancel subscription for a particular api key automatically.
-
-## Request[​](#request "Direct link to Request")
-
-```
---request POST 'https://modelslab.com/api/v3/cancel_subscription' \
-```
 
 <Warning>
   Before calling this endpoint, you must have purchased subscription via **[this endpoint](/general-api/buy-subscription)**
 </Warning>
 
-Send a `POST` request to [https://modelslab.com/api/v3/cancel\_subscription](https://modelslab.com/api/v3/cancel_subscription) endpoint and pass the desired **key\_to\_cancel** .
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter           | Type   | Description                                                    |
-| :------------------ | :----- | :------------------------------------------------------------- |
-| **key**             | String | Your default API Key used for request authorization            |
-| **key\_to\_cancel** | String | The api custom api key you want to cancel the subscription for |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{  "key":"your-default-api-key",  "key_to_cancel":"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"}
+## Request
+Send a `POST` request to below endpoint and pass the desired **key\_to\_cancel** .
+```curl curl
+--request POST 'https://modelslab.com/api/v3/cancel_subscription' \
 ```
 
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "key_to_cancel":"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v3/cancel_subscription", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => "",  "key_to_cancel" => "a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v3/cancel_subscription',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v3/cancel_subscription',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "key_to_cancel":"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v3/cancel_subscription"payload = json.dumps({  "key": "",  "key_to_cancel":"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\",\n    \"key_to_cancel\": \"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v3/cancel_subscription")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-```
-{    "status": "success",    "messege": "subscription cancelled successfully"}
+## Body
+```json
+{  
+  "key":"your-default-api-key",  
+  "key_to_cancel":"a2cSbgGXIqAHtr3iDBpCdb1yVLZZk000cCltCTtUNpkRM45mak5SpLY9gAlR"
+}
 ```
